<resources>
    <string name="app_name">Text Spacer</string>
    <string name="textbox0"></string>
    <string name="textbox1"></string>
    <string name="textbox2"></string>
    <string name="textbox3"></string>
    <string name="textbox4"></string>
    <string name="textbox5"></string>
    <string name="textbox6"></string>
    <string name="textbox7"></string>
    <string name="textbox8"></string>
    <string name="textbox9"></string>
    <string name="textbox10"></string>
    <string name="textbox11"></string>
    <string name="textbox12"></string>
    <string name="textbox13"></string>
    <string name="textbox14"></string>
    <string name="editText"></string>
    <string name="submitButton">Submit</string>
</resources>