<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            app:columnCount="3"
            app:layout_constraintTop_toTopOf="parent"
            app:rowCount="5"
            tools:layout_editor_absoluteX="10dp">


            <TextView
                android:id="@+id/t0"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox0"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox1"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox2"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox3"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox4"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox5"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox6"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t7"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox7"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t8"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox8"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t9"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox9"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t10"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox10"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t11"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox11"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t12"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox12"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t13"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox13"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/t14"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_margin="5sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/textbox14"
                android:textSize="14sp"
                app:layout_columnWeight="1" />

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:text="@string/editText"
            android:autofillHints="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitButton" />

    </LinearLayout>

</RelativeLayout>